--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -36,6 +36,16 @@ $background-opacity: 0.9;
     }
 }
 
+//ser text color
+@function set-text-color ($color) {
+    @if (lightness($color) > 40) {
+        @return #000;
+    } @else {
+            @return #fff;
+        }
+}
+
+
 
 @mixin mediaMd {
     @media screen and (max-width: 768px) {
